[package]
name = "StalcraftClanTool"
version = "0.1.0"
edition = "2024"

[features]
# disable_bug_fixes = []

[dependencies]
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
calamine = "0.34.0"
xlsxwriter = "0.6.1"
toml = "0.9.8"
image = "0.25.10"
tesseract = "0.15.2"
strsim = "0.11.1"
notify-rust = "4.0"
rayon = "1.11.0"
anyhow = "1.0.102"
fs2 = "0.4"
home = "0.5.12"